# flying-fish

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  EDA.ipynb  INTEGRATION_README.md  INTEGRATION_SUMMARY.md  README.md  docker-compose.yml  main.ipynb  model.ipynb  pyproject.toml  requirements.txt  train_xgb.py
.ipynb_checkpoints/: model-checkpoint.ipynb
backend/: main.py  workflow.py
backend/agents/: __init__.py  explainability_agent.py  recommendation_agent.py  risk_assessment_agent.py  speculation_agent.py
frontend/: CLICKABLE_STATES_GUIDE.md  COMPETITION_DEMO_CARD.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  FEATURE_UPDATE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_GUIDE.md  README_MODULAR.md  README_MULTIPAGE.md  SYNTHETIC_FEATURES_GUIDE.md  VISUAL_INTERACTION_GUIDE.md  WHAT_IF_PLANNER_GUIDE.md  app.py  app_modular.py  app_multipage.py  data_operations.py  model_operations.py  styles.py  ui_components.py  xgboost_churn_model.pkl
frontend/pages/: __init__.py  aggregate_dashboard_page.py  overview_page.py  single_customer_page.py
models/: churn_model.pkl  feature_names.pkl  metrics.json  scaler.pkl  shap_summary.json  xgb_churn_pipeline.pkl
