[project]
name = "flying-fish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "google-generativeai>=0.8.5",
    "imbalanced-learn>=0.14.0",
    "imblearn>=0.0",
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.6.10",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydantic>=2.12.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
    "xgboost>=3.0.5",
]
